exports[`GroupItemsWidget should render an array of items 1`] = `
<div>
  <li
    onClick={[Function]}>
    test 1
  </li>
  <li
    onClick={[Function]}>
    test 2
  </li>
</div>
`;

exports[`GroupItemsWidget should validate the prop types 1`] = `
"Warning: Failed prop type: The prop \`items[0].label\` is marked as required in \`SelectMultichoiceGroup\`, but its value is \`undefined\`.
    in SelectMultichoiceGroup"
`;

exports[`GroupItemsWidget should validate the prop types 2`] = `
"Warning: Failed prop type: Invalid prop \`onItemSelection\` of type \`number\` supplied to \`SelectMultichoiceGroup\`, expected \`function\`.
    in SelectMultichoiceGroup"
`;
